Closed
Bug 1133291
Opened 6 years ago
Closed 6 years ago
Suppress -Wunused warnings in third-party code: openaes
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
People
(Reporter: cpeterson, Assigned: cpeterson)
References
Details
Attachments
(2 files)
1.00 KB,
patch
|
cpearce
:
review+
|
Details | Diff | Splinter Review |
1.92 KB,
patch
|
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Do we expect to import upstream openaes ever again? If not, then I can remove this unused code instead of suppressing the warnings. If yes, then bug 1092023's local changes to oaes_lib.c will be overwritten. media/gmp-clearkey/0.1/openaes/oaes_lib.c:30:19: error: unused variable '_NR' [-Werror,-Wunused-const-variable] media/gmp-clearkey/0.1/openaes/oaes_lib.c:289:17: error: unused function 'oaes_word_rot_right' [-Werror,-Wunused-function]
Attachment #8564673 -
Flags: review?(cpearce)
Assignee | ||
Comment 1•6 years ago
|
||
btw, OpenAES-0.10.0 was released on 2015-02-02: https://code.google.com/p/openaes/source/detail?r=f044d2b3a27e2d783296c417bf58aa655e262e93
Updated•6 years ago
|
Attachment #8564673 -
Flags: review?(cpearce) → review+
Assignee | ||
Comment 2•6 years ago
|
||
Do you expect to import upstream openaes ever again? If not, then I can remove this unused code instead of suppressing the warnings. If yes, then bug 1092023's local changes to oaes_lib.c will be overwritten.
Flags: needinfo?(cpearce)
(In reply to Chris Pearce (:cpearce) from comment #3) > Doubt it. Edwin, comment 2? Yeah, may as well remove it.
Flags: needinfo?(edwin)
Assignee | ||
Comment 5•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/f57201a6482d
Comment 6•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/f57201a6482d
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox38:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Updated•6 years ago
|
Blocks: eme-platform-uplift
Comment 7•6 years ago
|
||
https://hg.mozilla.org/releases/mozilla-beta/rev/e13431adabfd
status-firefox37:
--- → fixed
Comment 8•6 years ago
|
||
Patch for beta branch as part of EME platform uplift.
Comment 9•6 years ago
|
||
Comment on attachment 8572375 [details] [diff] [review] Beta patch Requesting retroactive approval for Beta landing as part of EME platform uplift.
Attachment #8572375 -
Flags: approval-mozilla-beta?
Comment 10•6 years ago
|
||
Comment on attachment 8572375 [details] [diff] [review] Beta patch Approved for Beta as part of EME platform uplift.
Attachment #8572375 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in
before you can comment on or make changes to this bug.
Description
•