Bug 1133291 - Remove unused code from Clear Key's openaes. r=cpearce a=lmandel